// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchList should render a results list 1`] = `
<div
  className="qa-search-results-list"
>
  <ul
    className="o-list"
  >
    <SearchListItem
      category={
        Object {
          "results": Array [
            Object {
              "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630003761571/",
              "label": "Dam 1",
            },
            Object {
              "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630011909911/",
              "label": "Dam 2",
            },
          ],
        }
      }
      key="Dam 1-0"
      result={
        Object {
          "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630003761571/",
          "label": "Dam 1",
          "linkTo": Object {
            "meta": Object {
              "additionalParams": Object {
                "view": undefined,
              },
              "preserve": true,
            },
            "payload": Object {
              "id": "id03630003761571",
              "subtype": "verblijfsobject",
              "type": "bag",
            },
            "type": "atlasRouter/DATA_DETAIL",
          },
        }
      }
    />
    <SearchListItem
      category={
        Object {
          "results": Array [
            Object {
              "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630003761571/",
              "label": "Dam 1",
            },
            Object {
              "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630011909911/",
              "label": "Dam 2",
            },
          ],
        }
      }
      key="Dam 2-1"
      result={
        Object {
          "endpoint": "https://acc.api.data.amsterdam.nl/bag/verblijfsobject/03630011909911/",
          "label": "Dam 2",
          "linkTo": Object {
            "meta": Object {
              "additionalParams": Object {
                "view": undefined,
              },
              "preserve": true,
            },
            "payload": Object {
              "id": "id03630011909911",
              "subtype": "verblijfsobject",
              "type": "bag",
            },
            "type": "atlasRouter/DATA_DETAIL",
          },
        }
      }
    />
  </ul>
</div>
`;

exports[`SearchList should render an empty list  1`] = `
<div
  className="qa-search-results-list"
>
  <ul
    className="o-list"
  />
</div>
`;

exports[`SearchList should render the Toon meer button when the hasLoadMore flag is set  1`] = `
<div
  className="qa-search-results-list"
>
  <ul
    className="o-list"
  />
  <button
    className="c-show-more c-show-more--gray qa-show-more"
    onClick={[MockFunction]}
    tabIndex="0"
    type="button"
  >
    Toon meer
  </button>
</div>
`;
